[gd_scene load_steps=5 format=2]

[ext_resource path="res://core/HeroPoint/HeroPoint.gd" type="Script" id=1]
[ext_resource path="res://Futura Std Medium.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Hero-Sprite.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 2 )

[node name="HeroPin" type="Node2D"]
script = ExtResource( 1 )

[node name="HeroPinButton" type="TextureButton" parent="."]
margin_left = -18.936
margin_top = -33.0897
margin_right = 240.064
margin_bottom = 126.91
rect_scale = Vector2( 0.146414, 0.221035 )
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeroName" type="Label" parent="."]
margin_left = -31.665
margin_top = -48.5089
margin_right = 314.335
margin_bottom = 22.4911
rect_scale = Vector2( 0.200321, 0.200321 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Hero Name"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="HeroPinButton" to="." method="_on_HeroPinButton_button_down"]
